--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -34,12 +34,14 @@ if ( is_file($caPaths['addConverted']) ) {
 $date = (date("n/d"));
 
 $translations =   version_compare($unRaidSettings['version'],"6.9.0-beta0",">");
+
 if ( $translations ) {
-	$translationFile = "$docroot/languages/{$_SESSION['locale']}/".basename(strtolower($_SERVER['REQUEST_URI']))."-1.txt";
-  $pluginTranslations = @parse_ini_file($translationFile,false,INI_SCANNER_RAW);
+	$translationFile = "$docroot/languages/{$_SESSION['locale']}/".basename(strtolower($_SERVER['REQUEST_URI'])).".txt";
+	if ( ! is_file($translationFile) )
+		$translations = false;
+	else
+		$pluginTranslations = @parse_ini_file($translationFile,false,INI_SCANNER_RAW);
 }
-$pluginTranslations = $pluginTranslations ?: array();
-print_r($pluginTranslations);
 
 function tr($string) {
 	global $translations, $pluginTranslations;
@@ -51,7 +53,6 @@ function tr($string) {
 	}
 	echo $string;
 }
-		
 	
 ?>
 <? if ( ! $unRaid69 ):?>
@@ -64,10 +65,22 @@ function tr($string) {
 
 <script src='<?autov("/plugins/community.applications/javascript/libraries.js")?>'></script>
 <script>
+
+// CONSIDER REMOVING THIS WARNING DURING A RELEASE.  NOT 100% IF IT WON'T CAUSE PROBLEMS
+<?if ( $translations && empty($pluginTranslations) ):?>
+	addBannerWarning("INVALID TRANSLATION FILE");
+<?endif;?>
+
+
 var translationArray = new Array;
-<?foreach ($pluginTranslations as $english => $translation):?>
-  translationArray.push({english:"<?=$english?>",translation:"<?=$translation?>"});
-<?endforeach;?>
+<? 
+	if ($translations) {
+		foreach ($pluginTranslations as $english => $translation):?>
+			translationArray.push({english:"<?=$english?>",translation:"<?=$translation?>"});
+		<?endforeach;
+	}
+?>
+	
 
 var searchBoxInput;
 var searchBoxAwesomplete;
@@ -250,7 +263,7 @@ $(function(){
 					location.reload();
 				});
 			} else {
-				addBannerWarning(tr("Installations of apps disabled.  You must accept the warning to be able to install applications.")+"  "+tr("Click")+" <a onclick='window.location.reload();' style='cursor:pointer;'>"+tr("HERE")+"</a>",true,true);
+				addBannerWarning(tr("Installations of apps disabled.  You must accept the warning to be able to install applications.")+"   <a onclick='window.location.reload();' style='cursor:pointer;'>"+tr("Click Here")+"</a>",true,true);
 				updateContent();
 			}
 		});
@@ -1366,7 +1379,7 @@ function tr(string) {
 > <i class='fa fa-exclamation-triangle' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clicking this will display any warnings or extra comments about the application<br>
 > <input type='checkbox' checked> &nbsp;&nbsp;&nbsp;On the previous apps section, you can select  multiple applications to install simultaneously<br>
 > <span class='ca_thumbsup' style='margin-left:0px; font-size:2rem;'></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is a recommended application based upon support requests and answers in the unRaid forum<br>
-> <center>For support for this plugin, visit <a title='click for help' href="https://lime-technology.com/forums/topic/38582-plug-in-community-applications/" target="_blank">HERE</a></center>
+> <center>For support for this plugin, visit <a title='click for help' href='https://lime-technology.com/forums/topic/38582-plug-in-community-applications/' target='_blank'>HERE</a></center>
 > 
 > To view the policies Community Applications has, click <a href='https://forums.unraid.net/topic/87144-ca-application-policies/' target='_blank'>HERE</a>
 <?else:?>
@@ -1383,7 +1396,7 @@ function tr(string) {
 > <i class='fa fa-exclamation-triangle' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clicking this will display any warnings or extra comments about the application<br>
 > <input type='checkbox' checked> &nbsp;&nbsp;&nbsp;On the previous apps section, you can select  multiple applications to install simultaneously<br>
 > <span class='ca_thumbsup' style='margin-left:0px; font-size:2rem;'></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is a recommended application based upon support requests and answers in the unRaid forum<br>
-> <center>For support for this plugin, visit <a title='click for help' href="https://lime-technology.com/forums/topic/38582-plug-in-community-applications/" target="_blank">HERE</a></center>
+> <center>For support for this plugin, visit <a title='click for help' href='https://lime-technology.com/forums/topic/38582-plug-in-community-applications/' target='_blank'>HERE</a></center>
 > 
 > To view the policies Community Applications has, click <a href='https://forums.unraid.net/topic/87144-ca-application-policies/' target='_blank'>HERE</a>
 :end
